# zbricks

./: .gitignore  README.md  SIGNALS.md  app.py  pyproject.toml
.github/workflows/: ci-dev.yml  release-main.yml
.trash/: README.md  app.py  example1.md  example2.md
OLDdocs/: DEVELOPMENT.md  README.md  api.md  index.md
OLDdocs/legacy/: ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  README.md
OLDdocs/src/: README.md  index.md
docs/: ARCHITECTURE.md  EXAMPLES.md
examples/01-hello-world/: app.py  pyproject.toml
examples/01-hello-world/static/: style.css
examples/01-hello-world/templates/: index.html
examples/01-hello-world/tests/: test_app.py  test_hello_world.py
src/docs/: README.md  app.py  site.yaml
src/docs/content/: example1.md  example2.md
src/docs/theme/: base.html  index.html
src/themes/: doc.html  index.html
src/zbricks/: __init__.py  introspection.py
src/zbricks/bricks/templating/: __init__.py
src/zbricks/bricks/templating/templates/: base.html  index.html  layout.html
src/zbricks/core/: middleware.py  router.py  settings.py  templating.py
src/zbricks/core/templates/: base.html  index.html
src/zbricks/docs/: docs_signals.py  serve.py
src/zbricks/signals/: __init__.py  core.py
src/zbricks/signals/dispatchers/: fire_and_forget.py
src/zbricks/signals/replies/: ignore.py
src/zbricks/themes/_default/: doc.html
tests/: conftest.py  test_docs_server.py  test_hello.py  test_hello_world.py  test_integration.py  test_middleware.py  test_router.py  test_settings.py  test_templating.py
tests/signals/: test_basic.py  test_core_fire_and_forget.py  test_filter.py  test_integration.py  test_once.py  test_override.py  test_unsubscribe.py
