[project]
name = "zbricks"
# version is managed by hatch-vcs
dynamic = ["version"]
description = "zBricks - build cool stuff"
readme = "README.md"
authors = [
    { name = "zdeyn", email = "zdeyn@zdeyn.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.7.0",
    "hatch-vcs>=0.5.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.0.0",
    "pytest-doctestplus>=1.4.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/zbricks/_version.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=README.md"
