[project]
name = "zbricks"
# version is managed by hatch-vcs
dynamic = ["version"]
description = "zBricks - build cool stuff"
readme = "README.md"
authors = [
    { name = "zdeyn", email = "zdeyn@zdeyn.com" }
]
requires-python = ">=3.13"
dependencies = [
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic>=2.0",
    "starlette>=0.47.1",
    "types-pyyaml>=6.0.12.20250516",
    "uvicorn>=0.35.0",
    "watchdog>=6.0.0",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.7.0",
    "hatch-vcs>=0.5.0",
    "httpie>=3.2.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markdown-it-py>=3.0.0",
    "mypy>=1.16.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-doctestplus>=1.4.0",
    "pyyaml>=6.0.2",
    "ruff>=0.12.1",
    "starlette>=0.47.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/zbricks/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zbricks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--doctest-modules --doctest-glob=README.md --cov=src/zbricks/signals --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C90", "A", "C4", "DTZ", "PIE", "PT", "RUF", "SIM", "TCH", "TID", "T20", "Q"]
ignore = []

[tool.coverage.run]
branch = true
source = ["src/zbricks/signals"]

[tool.coverage.report]
show_missing = true
skip_covered = true
